// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Accessibility/Visually Hidden Visually Hidden 1`] = `
Array [
  <link
    href="https://fonts.googleapis.com/css2?family=Lexend:wght@300&display=swap"
    rel="stylesheet"
  />,
  <link
    href="https://fonts.googleapis.com/css2?family=ABeeZee&display=swap"
    rel="stylesheet"
  />,
  <div
    className="sc-kLLXSd fJUXcW"
  >
    A screen reader will read this but you can't see it
  </div>,
]
`;

exports[`Storyshots Buttons/Bookmark Lesson Button Bookmark Lesson Button 1`] = `
Array [
  <link
    href="https://fonts.googleapis.com/css2?family=Lexend:wght@300&display=swap"
    rel="stylesheet"
  />,
  <link
    href="https://fonts.googleapis.com/css2?family=ABeeZee&display=swap"
    rel="stylesheet"
  />,
  <div>
    <div>
      <button
        aria-label="Add Bookmark"
        className="sc-bczRLJ sc-eCYdqJ bprpIx bgWoby"
        disabled={false}
        onClick={[Function]}
        title="Add Bookmark"
      >
        <div
          className="sc-hKMtZM dzHdVU"
          size="small"
        >
          <span
            className="sc-gsnTZi hnKkoM"
            style={
              Object {
                "height": "16px",
                "width": "16px",
              }
            }
          >
            <span
              className="sc-dkzDqf krVImC"
              style={
                Object {
                  "height": "16px",
                  "width": "16px",
                }
              }
            >
              <svg
                fill="currentColor"
                viewBox="2 2 20 20"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
                <path
                  d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z"
                />
              </svg>
            </span>
          </span>
        </div>
      </button>
    </div>
  </div>,
]
`;

exports[`Storyshots Buttons/Button As Link Button As Link 1`] = `
Array [
  <link
    href="https://fonts.googleapis.com/css2?family=Lexend:wght@300&display=swap"
    rel="stylesheet"
  />,
  <link
    href="https://fonts.googleapis.com/css2?family=ABeeZee&display=swap"
    rel="stylesheet"
  />,
  <a
    aria-label="Click me"
    className="sc-iqcoie dYRntO"
    href="/"
    onClick={[Function]}
    onKeyDown={[Function]}
    onMouseEnter={[Function]}
    role="button"
    title="Click me"
  >
    <div
      className="sc-jqUVSM jcrMkW"
      size="small"
    >
      <span
        className="sc-papXJ bdMMXR"
      >
        Click me
      </span>
    </div>
  </a>,
]
`;

exports[`Storyshots Buttons/Button Button 1`] = `
Array [
  <link
    href="https://fonts.googleapis.com/css2?family=Lexend:wght@300&display=swap"
    rel="stylesheet"
  />,
  <link
    href="https://fonts.googleapis.com/css2?family=ABeeZee&display=swap"
    rel="stylesheet"
  />,
  <button
    aria-label="Click me"
    className="sc-bczRLJ sc-kDDrLX bprpIx fzrCGb"
    title="Click me"
  >
    <div
      className="sc-jqUVSM jcrMkW"
      size="small"
    >
      <span
        className="sc-papXJ bdMMXR"
      >
        Click me
      </span>
    </div>
  </button>,
]
`;

exports[`Storyshots Buttons/Button Group Button Group 1`] = `
Array [
  <link
    href="https://fonts.googleapis.com/css2?family=Lexend:wght@300&display=swap"
    rel="stylesheet"
  />,
  <link
    href="https://fonts.googleapis.com/css2?family=ABeeZee&display=swap"
    rel="stylesheet"
  />,
  <div
    className="sc-evZas sc-breuTD fuwPfM fovvaV"
  >
    <a
      aria-label="Download Lesson"
      className="sc-iqcoie dYRntO"
      href="/"
      onClick={[Function]}
      onKeyDown={[Function]}
      onMouseEnter={[Function]}
      role="button"
      title="Download Lesson"
    >
      <div
        className="sc-jqUVSM jcrMkW"
        size="small"
      >
        <span
          className="sc-ftvSup cTDWXd"
        >
          <span
            className="sc-gsnTZi hnKkoM"
            style={
              Object {
                "height": "16px",
                "width": "16px",
              }
            }
          >
            <span
              className="sc-dkzDqf krVImC"
              style={
                Object {
                  "height": "16px",
                  "width": "16px",
                }
              }
            >
              <svg
                fill="none"
                height="100%"
                stroke="currentColor"
                strokeLinecap="round"
                strokeLinejoin="round"
                strokeWidth="2.5"
                viewBox="0 0 24 24"
                width="100%"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"
                />
                <polyline
                  points="7 10 12 15 17 10"
                />
                <line
                  x1="12"
                  x2="12"
                  y1="15"
                  y2="3"
                />
              </svg>
            </span>
          </span>
        </span>
        <span
          className="sc-papXJ bdMMXR"
        >
          Download
        </span>
      </div>
    </a>
    <a
      aria-label="Share Lesson"
      className="sc-iqcoie dYRntO"
      href="/"
      onClick={[Function]}
      onKeyDown={[Function]}
      onMouseEnter={[Function]}
      role="button"
      title="Share Lesson"
    >
      <div
        className="sc-jqUVSM jcrMkW"
        size="small"
      >
        <span
          className="sc-ftvSup cTDWXd"
        >
          <span
            className="sc-gsnTZi hnKkoM"
            style={
              Object {
                "height": "16px",
                "width": "16px",
              }
            }
          >
            <span
              className="sc-dkzDqf krVImC"
              style={
                Object {
                  "height": "16px",
                  "width": "16px",
                }
              }
            >
              <svg
                fill="none"
                height="100%"
                stroke="currentColor"
                strokeLinecap="round"
                strokeLinejoin="round"
                strokeWidth="2.5"
                viewBox="0 0 24 24"
                width="100%"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="18"
                  cy="5"
                  r="3"
                />
                <circle
                  cx="6"
                  cy="12"
                  r="3"
                />
                <circle
                  cx="18"
                  cy="19"
                  r="3"
                />
                <line
                  x1="8.59"
                  x2="15.42"
                  y1="13.51"
                  y2="17.49"
                />
                <line
                  x1="15.41"
                  x2="8.59"
                  y1="6.51"
                  y2="10.49"
                />
              </svg>
            </span>
          </span>
        </span>
        <span
          className="sc-papXJ bdMMXR"
        >
          Share
        </span>
      </div>
    </a>
  </div>,
]
`;

exports[`Storyshots Buttons/Icon Button As Link Icon Button As Link 1`] = `
Array [
  <link
    href="https://fonts.googleapis.com/css2?family=Lexend:wght@300&display=swap"
    rel="stylesheet"
  />,
  <link
    href="https://fonts.googleapis.com/css2?family=ABeeZee&display=swap"
    rel="stylesheet"
  />,
  <a
    aria-label="Click me"
    className="sc-crXcEl cYDujB"
    href="/"
    onClick={[Function]}
    onKeyDown={[Function]}
    onMouseEnter={[Function]}
    role="button"
  >
    <div
      className="sc-hKMtZM dzHdVU"
      size="small"
    >
      <span
        className="sc-gsnTZi hnKkoM"
        style={
          Object {
            "height": "16px",
            "width": "16px",
          }
        }
      >
        <span
          className="sc-dkzDqf krVImC"
          style={
            Object {
              "height": "16px",
              "width": "16px",
            }
          }
        >
          <svg
            fill="none"
            height="100%"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth="2.5"
            viewBox="0 0 24 24"
            width="100%"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"
            />
            <polyline
              points="7 10 12 15 17 10"
            />
            <line
              x1="12"
              x2="12"
              y1="15"
              y2="3"
            />
          </svg>
        </span>
      </span>
    </div>
  </a>,
]
`;

exports[`Storyshots Buttons/Icon Button Icon Button 1`] = `
Array [
  <link
    href="https://fonts.googleapis.com/css2?family=Lexend:wght@300&display=swap"
    rel="stylesheet"
  />,
  <link
    href="https://fonts.googleapis.com/css2?family=ABeeZee&display=swap"
    rel="stylesheet"
  />,
  <button
    aria-label="Click me"
    className="sc-bczRLJ sc-eCYdqJ bprpIx bgWoby"
    title="Click me"
  >
    <div
      className="sc-hKMtZM dzHdVU"
      size="small"
    >
      <span
        className="sc-gsnTZi hnKkoM"
        style={
          Object {
            "height": "16px",
            "width": "16px",
          }
        }
      >
        <span
          className="sc-dkzDqf krVImC"
          style={
            Object {
              "height": "16px",
              "width": "16px",
            }
          }
        >
          <svg
            fill="none"
            height="100%"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth="2.5"
            viewBox="0 0 24 24"
            width="100%"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"
            />
            <polyline
              points="7 10 12 15 17 10"
            />
            <line
              x1="12"
              x2="12"
              y1="15"
              y2="3"
            />
          </svg>
        </span>
      </span>
    </div>
  </button>,
]
`;

exports[`Storyshots Cards/Card Card 1`] = `
Array [
  <link
    href="https://fonts.googleapis.com/css2?family=Lexend:wght@300&display=swap"
    rel="stylesheet"
  />,
  <link
    href="https://fonts.googleapis.com/css2?family=ABeeZee&display=swap"
    rel="stylesheet"
  />,
  <div
    className="sc-ksZaOG iEMngk"
  >
    <h2>
      Card title
    </h2>
    <p>
      You can put anything you like in here.
    </p>
  </div>,
]
`;

exports[`Storyshots Feedback/LoadingSpinner Loading Spinner 1`] = `
Array [
  <link
    href="https://fonts.googleapis.com/css2?family=Lexend:wght@300&display=swap"
    rel="stylesheet"
  />,
  <link
    href="https://fonts.googleapis.com/css2?family=ABeeZee&display=swap"
    rel="stylesheet"
  />,
  <span
    className="sc-ivTmOn hhsiaB"
  >
    <span
      className="sc-bBrHrO kThuDh"
    >
      Loading
    </span>
  </span>,
]
`;

exports[`Storyshots Form/BigInput Big Input 1`] = `
Array [
  <link
    href="https://fonts.googleapis.com/css2?family=Lexend:wght@300&display=swap"
    rel="stylesheet"
  />,
  <link
    href="https://fonts.googleapis.com/css2?family=ABeeZee&display=swap"
    rel="stylesheet"
  />,
  <input
    className="sc-bjUoiL sc-idiyUo huCKQk fVMMHD"
    onChange={[Function]}
    placeholder="Placeholder"
    value=""
  />,
]
`;

exports[`Storyshots Form/Checkbox Checkbox 1`] = `
Array [
  <link
    href="https://fonts.googleapis.com/css2?family=Lexend:wght@300&display=swap"
    rel="stylesheet"
  />,
  <link
    href="https://fonts.googleapis.com/css2?family=ABeeZee&display=swap"
    rel="stylesheet"
  />,
  <label
    className="sc-hAZoDl hczpL"
    htmlFor="oak-checkbox"
    onClick={[Function]}
  >
    <input
      checked={true}
      className="sc-fnykZs cnUwVh"
      id="Click me"
      onChange={[Function]}
      type="checkbox"
    />
    <svg
      aria-hidden="true"
      fill="none"
      focusable="false"
      height="24"
      viewBox="0 0 24 24"
      width="24"
    >
      <rect
        fill="white"
        height="23"
        rx="3.5"
        width="23"
        x="0.5"
        y="0.5"
      />
      <path
        d="M10.0664 16.8233C10.3008 17.0589 10.6992 17.0589 10.9336 16.8233L17.8242 9.8966C18.0586 9.66099 18.0586 9.26047 17.8242 9.02487L16.9805 8.1767C16.7461 7.9411 16.3711 7.9411 16.1367 8.1767L10.5117 13.8312L7.86328 11.1924C7.62891 10.9568 7.25391 10.9568 7.01953 11.1924L6.17578 12.0406C5.94141 12.2762 5.94141 12.6767 6.17578 12.9123L10.0664 16.8233Z"
        fill="#4D4D4D"
      />
      <rect
        height="23"
        rx="3.5"
        stroke="#4D4D4D"
        width="23"
        x="0.5"
        y="0.5"
      />
    </svg>
    <span
      className="sc-fEOsli ihLolo"
    >
      Click me
    </span>
  </label>,
]
`;

exports[`Storyshots Form/Input Input 1`] = `
Array [
  <link
    href="https://fonts.googleapis.com/css2?family=Lexend:wght@300&display=swap"
    rel="stylesheet"
  />,
  <link
    href="https://fonts.googleapis.com/css2?family=ABeeZee&display=swap"
    rel="stylesheet"
  />,
  <input
    className="sc-bjUoiL sc-dIouRR huCKQk fqcJsg"
    onChange={[Function]}
    placeholder="Placeholder"
    value=""
  />,
]
`;

exports[`Storyshots Foundations/Flex Flex 1`] = `
Array [
  <link
    href="https://fonts.googleapis.com/css2?family=Lexend:wght@300&display=swap"
    rel="stylesheet"
  />,
  <link
    href="https://fonts.googleapis.com/css2?family=ABeeZee&display=swap"
    rel="stylesheet"
  />,
  <div
    className="sc-evZas fkNRqR"
  >
    Flex box
  </div>,
]
`;

exports[`Storyshots Foundations/Heading Heading 1`] = `
Array [
  <link
    href="https://fonts.googleapis.com/css2?family=Lexend:wght@300&display=swap"
    rel="stylesheet"
  />,
  <link
    href="https://fonts.googleapis.com/css2?family=ABeeZee&display=swap"
    rel="stylesheet"
  />,
  <span
    className="sc-hHLeRK hNzYgl"
  >
    Heading
  </span>,
]
`;

exports[`Storyshots Foundations/Text Text 1`] = `
Array [
  <link
    href="https://fonts.googleapis.com/css2?family=Lexend:wght@300&display=swap"
    rel="stylesheet"
  />,
  <link
    href="https://fonts.googleapis.com/css2?family=ABeeZee&display=swap"
    rel="stylesheet"
  />,
  <p
    className="sc-dmRaPn fRxIjG"
  >
    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Id semper risus in hendrerit gravida rutrum quisque non tellus. Nibh praesent tristique magna sit. A arcu cursus vitae congue mauris rhoncus aenean. Turpis egestas maecenas pharetra convallis posuere morbi leo. Faucibus pulvinar elementum integer enim neque volutpat ac tincidunt. Vitae suscipit tellus mauris a diam maecenas. Faucibus a pellentesque sit amet porttitor eget dolor morbi non. Tortor vitae purus faucibus ornare. Bibendum est ultricies integer quis auctor elit. Massa id neque aliquam vestibulum morbi. Gravida neque convallis a cras semper auctor neque vitae. Massa tempor nec feugiat nisl pretium fusce id velit ut. Volutpat ac tincidunt vitae semper quis lectus nulla at volutpat. Id porta nibh venenatis cras sed felis eget. Pulvinar mattis nunc sed blandit libero volutpat sed cras. A diam maecenas sed enim ut sem viverra.
  </p>,
]
`;

exports[`Storyshots Headers & Footers/LessonHeader Lesson Header 1`] = `
Array [
  <link
    href="https://fonts.googleapis.com/css2?family=Lexend:wght@300&display=swap"
    rel="stylesheet"
  />,
  <link
    href="https://fonts.googleapis.com/css2?family=ABeeZee&display=swap"
    rel="stylesheet"
  />,
  <header
    className="sc-fLlhyt kWMohG"
  >
    <div
      className="sc-evZas fuwPfM"
    >
      <h1
        className="sc-hHLeRK gEXTQY"
        size={4}
      >
        <span
          className="sc-kgflAQ YmZVc"
          display="block"
          fontSize={24}
        >
          Lesson
        </span>
      </h1>
    </div>
    <div
      className="sc-evZas sc-breuTD fuwPfM fovvaV"
    >
      <a
        aria-label="Download Lesson"
        className="sc-iqcoie dYRntO"
        href="/"
        onClick={[Function]}
        onKeyDown={[Function]}
        onMouseEnter={[Function]}
        role="button"
        title="Download Lesson"
      >
        <div
          className="sc-jqUVSM jDnmy"
          size="small"
        >
          <span
            className="sc-ftvSup cTDWXd"
          >
            <span
              className="sc-gsnTZi hnKkoM"
              style={
                Object {
                  "height": "16px",
                  "width": "16px",
                }
              }
            >
              <span
                className="sc-dkzDqf krVImC"
                style={
                  Object {
                    "height": "16px",
                    "width": "16px",
                  }
                }
              >
                <svg
                  fill="none"
                  height="100%"
                  stroke="currentColor"
                  strokeLinecap="round"
                  strokeLinejoin="round"
                  strokeWidth="2.5"
                  viewBox="0 0 24 24"
                  width="100%"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"
                  />
                  <polyline
                    points="7 10 12 15 17 10"
                  />
                  <line
                    x1="12"
                    x2="12"
                    y1="15"
                    y2="3"
                  />
                </svg>
              </span>
            </span>
          </span>
          <span
            className="sc-papXJ bdMMXR"
          >
            Download
          </span>
        </div>
      </a>
      <a
        aria-label="Share Lesson"
        className="sc-iqcoie dYRntO"
        href="/"
        onClick={[Function]}
        onKeyDown={[Function]}
        onMouseEnter={[Function]}
        role="button"
        title="Share Lesson"
      >
        <div
          className="sc-jqUVSM jDnmy"
          size="small"
        >
          <span
            className="sc-ftvSup cTDWXd"
          >
            <span
              className="sc-gsnTZi hnKkoM"
              style={
                Object {
                  "height": "16px",
                  "width": "16px",
                }
              }
            >
              <span
                className="sc-dkzDqf krVImC"
                style={
                  Object {
                    "height": "16px",
                    "width": "16px",
                  }
                }
              >
                <svg
                  fill="none"
                  height="100%"
                  stroke="currentColor"
                  strokeLinecap="round"
                  strokeLinejoin="round"
                  strokeWidth="2.5"
                  viewBox="0 0 24 24"
                  width="100%"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <circle
                    cx="18"
                    cy="5"
                    r="3"
                  />
                  <circle
                    cx="6"
                    cy="12"
                    r="3"
                  />
                  <circle
                    cx="18"
                    cy="19"
                    r="3"
                  />
                  <line
                    x1="8.59"
                    x2="15.42"
                    y1="13.51"
                    y2="17.49"
                  />
                  <line
                    x1="15.41"
                    x2="8.59"
                    y1="6.51"
                    y2="10.49"
                  />
                </svg>
              </span>
            </span>
          </span>
          <span
            className="sc-papXJ bdMMXR"
          >
            Share
          </span>
        </div>
      </a>
      <button
        aria-label="Add Bookmark"
        className="sc-bczRLJ sc-eCYdqJ bprpIx bgWoby"
        disabled={false}
        onClick={[Function]}
        title="Add Bookmark"
      >
        <div
          className="sc-hKMtZM dzHdVU"
          size="small"
        >
          <span
            className="sc-gsnTZi hnKkoM"
            style={
              Object {
                "height": "16px",
                "width": "16px",
              }
            }
          >
            <span
              className="sc-dkzDqf krVImC"
              style={
                Object {
                  "height": "16px",
                  "width": "16px",
                }
              }
            >
              <svg
                fill="currentColor"
                viewBox="2 2 20 20"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
                <path
                  d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z"
                />
              </svg>
            </span>
          </span>
        </div>
      </button>
    </div>
  </header>,
]
`;

exports[`Storyshots Headers & Footers/SiteFooter Site Footer Example 1`] = `
Array [
  <link
    href="https://fonts.googleapis.com/css2?family=Lexend:wght@300&display=swap"
    rel="stylesheet"
  />,
  <link
    href="https://fonts.googleapis.com/css2?family=ABeeZee&display=swap"
    rel="stylesheet"
  />,
  <div>
    <footer
      className="sc-llJcti hqaoxH"
    >
      © Oak National Academy 
      2022
    </footer>
  </div>,
]
`;

exports[`Storyshots Headers & Footers/SiteHeader Site Footer Example 1`] = `
Array [
  <link
    href="https://fonts.googleapis.com/css2?family=Lexend:wght@300&display=swap"
    rel="stylesheet"
  />,
  <link
    href="https://fonts.googleapis.com/css2?family=ABeeZee&display=swap"
    rel="stylesheet"
  />,
  <div>
    <header
      className="sc-iIPllB eElEnU"
    >
      <div
        className="sc-evZas htLSfa"
      >
        <a
          className="sc-gicCDI fpCrjO"
          href="/"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          <span
            className="sc-gsnTZi lmSKEe"
            style={
              Object {
                "height": "30px",
                "width": "30px",
              }
            }
          >
            <span
              className="sc-dkzDqf krVImC"
              style={
                Object {
                  "height": "30px",
                  "width": "30px",
                }
              }
            >
              <svg
                height="100%"
                viewBox="0 0 48 48"
                width="100%"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M21.5 40h-10q-.65 0-1.075-.425Q10 39.15 10 38.5V24H5.95q-.5 0-.7-.475-.2-.475.2-.825L23 6.9q.4-.4 1-.4t1 .4l9 7.95V10.5q0-.65.425-1.075Q34.85 9 35.5 9h1q.65 0 1.075.425Q38 9.85 38 10.5v8.05l4.55 4.15q.4.35.225.825Q42.6 24 42.05 24H38v14.5q0 .65-.425 1.075Q37.15 40 36.5 40h-10V28h-5ZM13 37h5.5V26.5q0-.65.425-1.075Q19.35 25 20 25h8q.65 0 1.075.425.425.425.425 1.075V37H35V19.95l-11-10-11 10Zm6.75-17.5h8.5q0-1.65-1.275-2.725Q25.7 15.7 24 15.7q-1.7 0-2.975 1.075Q19.75 17.85 19.75 19.5ZM20 25h8-8Z"
                  fill="currentColor"
                />
              </svg>
            </span>
          </span>
          <span
            className="sc-kgflAQ tZCRa"
            fontFamily="heading"
            fontSize={20}
            fontWeight={600}
          >
            Oak
          </span>
        </a>
      </div>
      <form
        className="sc-cxabCf ceHISY"
        onSubmit={[Function]}
      >
        <input
          aria-label="Search"
          className="sc-bjUoiL sc-idiyUo huCKQk fVMMHD"
          onChange={[Function]}
          placeholder="Search"
          type="search"
          value=""
        />
        <button
          aria-label="Submit"
          className="sc-bczRLJ sc-eCYdqJ bprpIx dBkheU"
          onClick={[Function]}
          title="Submit"
          type="submit"
        >
          <div
            className="sc-hKMtZM dzHdVU"
            size="small"
          >
            <span
              className="sc-gsnTZi hnKkoM"
              style={
                Object {
                  "height": "16px",
                  "width": "16px",
                }
              }
            >
              <span
                className="sc-dkzDqf krVImC"
                style={
                  Object {
                    "height": "16px",
                    "width": "16px",
                  }
                }
              >
                <svg
                  height="100%"
                  viewBox="6 6 36 36"
                  width="100%"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M39.8 41.95 26.65 28.8q-1.5 1.3-3.5 2.025-2 .725-4.25.725-5.4 0-9.15-3.75T6 18.75q0-5.3 3.75-9.05 3.75-3.75 9.1-3.75 5.3 0 9.025 3.75 3.725 3.75 3.725 9.05 0 2.15-.7 4.15-.7 2-2.1 3.75L42 39.75Zm-20.95-13.4q4.05 0 6.9-2.875Q28.6 22.8 28.6 18.75t-2.85-6.925Q22.9 8.95 18.85 8.95q-4.1 0-6.975 2.875T9 18.75q0 4.05 2.875 6.925t6.975 2.875Z"
                    fill="currentColor"
                  />
                </svg>
              </span>
            </span>
          </div>
        </button>
      </form>
      <div
        className="sc-bZkfAO ScHcO"
      >
        <button
          className="sc-bczRLJ sc-ezWOiH bprpIx cnoIZr"
          onClick={[Function]}
        >
          pupils
        </button>
        <a
          href="/sign-in"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          Sign in
        </a>
      </div>
    </header>
  </div>,
]
`;

exports[`Storyshots Inputs/search Search Form 1`] = `
Array [
  <link
    href="https://fonts.googleapis.com/css2?family=Lexend:wght@300&display=swap"
    rel="stylesheet"
  />,
  <link
    href="https://fonts.googleapis.com/css2?family=ABeeZee&display=swap"
    rel="stylesheet"
  />,
  <form
    className="sc-cxabCf ceHISY"
    onSubmit={[Function]}
  >
    <input
      aria-label="Search"
      className="sc-bjUoiL sc-idiyUo huCKQk fVMMHD"
      onChange={[Function]}
      placeholder="Search"
      type="search"
      value=""
    />
    <button
      aria-label="Submit"
      className="sc-bczRLJ sc-eCYdqJ bprpIx dBkheU"
      onClick={[Function]}
      title="Submit"
      type="submit"
    >
      <div
        className="sc-hKMtZM dzHdVU"
        size="small"
      >
        <span
          className="sc-gsnTZi hnKkoM"
          style={
            Object {
              "height": "16px",
              "width": "16px",
            }
          }
        >
          <span
            className="sc-dkzDqf krVImC"
            style={
              Object {
                "height": "16px",
                "width": "16px",
              }
            }
          >
            <svg
              height="100%"
              viewBox="6 6 36 36"
              width="100%"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M39.8 41.95 26.65 28.8q-1.5 1.3-3.5 2.025-2 .725-4.25.725-5.4 0-9.15-3.75T6 18.75q0-5.3 3.75-9.05 3.75-3.75 9.1-3.75 5.3 0 9.025 3.75 3.725 3.75 3.725 9.05 0 2.15-.7 4.15-.7 2-2.1 3.75L42 39.75Zm-20.95-13.4q4.05 0 6.9-2.875Q28.6 22.8 28.6 18.75t-2.85-6.925Q22.9 8.95 18.85 8.95q-4.1 0-6.975 2.875T9 18.75q0 4.05 2.875 6.925t6.975 2.875Z"
                fill="currentColor"
              />
            </svg>
          </span>
        </span>
      </div>
    </button>
  </form>,
]
`;

exports[`Storyshots Media/Icon Icon Example 1`] = `
Array [
  <link
    href="https://fonts.googleapis.com/css2?family=Lexend:wght@300&display=swap"
    rel="stylesheet"
  />,
  <link
    href="https://fonts.googleapis.com/css2?family=ABeeZee&display=swap"
    rel="stylesheet"
  />,
  <div>
    <span
      className="sc-gsnTZi hnKkoM"
      style={
        Object {
          "height": "100px",
          "width": "100px",
        }
      }
    >
      <span
        className="sc-dkzDqf krVImC"
        style={
          Object {
            "height": "100px",
            "width": "100px",
          }
        }
      >
        <svg
          fill="none"
          height="100%"
          stroke="currentColor"
          strokeLinecap="round"
          strokeLinejoin="round"
          strokeWidth="2.5"
          viewBox="0 0 24 24"
          width="100%"
          xmlns="http://www.w3.org/2000/svg"
        >
          <polyline
            points="9 18 15 12 9 6"
          />
        </svg>
      </span>
    </span>
  </div>,
]
`;

exports[`Storyshots Navigation/Breadcrumbs Breadcrumb Example 1`] = `
Array [
  <link
    href="https://fonts.googleapis.com/css2?family=Lexend:wght@300&display=swap"
    rel="stylesheet"
  />,
  <link
    href="https://fonts.googleapis.com/css2?family=ABeeZee&display=swap"
    rel="stylesheet"
  />,
  <div>
    <nav
      aria-label="Breadcrumb"
      className="sc-jSMfEi dpkAqy"
    >
      <ol
        className="sc-gKXOVf flyuof"
      >
        <li
          className="sc-iBkjds djrcRa"
        >
          <a
            href="/"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            Unit Quiz
          </a>
        </li>
        <li
          className="sc-iBkjds djrcRa"
        >
          <span
            className="sc-gsnTZi hnKkoM"
            style={
              Object {
                "height": "20px",
                "width": "20px",
              }
            }
          >
            <span
              className="sc-dkzDqf krVImC"
              style={
                Object {
                  "height": "20px",
                  "width": "20px",
                }
              }
            >
              <svg
                fill="none"
                height="100%"
                stroke="currentColor"
                strokeLinecap="round"
                strokeLinejoin="round"
                strokeWidth="2.5"
                viewBox="0 0 24 24"
                width="100%"
                xmlns="http://www.w3.org/2000/svg"
              >
                <polyline
                  points="9 18 15 12 9 6"
                />
              </svg>
            </span>
          </span>
          <a
            href="/"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            View In Classroom
          </a>
        </li>
        <li
          className="sc-iBkjds djrcRa"
        >
          <span
            className="sc-gsnTZi hnKkoM"
            style={
              Object {
                "height": "20px",
                "width": "20px",
              }
            }
          >
            <span
              className="sc-dkzDqf krVImC"
              style={
                Object {
                  "height": "20px",
                  "width": "20px",
                }
              }
            >
              <svg
                fill="none"
                height="100%"
                stroke="currentColor"
                strokeLinecap="round"
                strokeLinejoin="round"
                strokeWidth="2.5"
                viewBox="0 0 24 24"
                width="100%"
                xmlns="http://www.w3.org/2000/svg"
              >
                <polyline
                  points="9 18 15 12 9 6"
                />
              </svg>
            </span>
          </span>
          <a
            href="/"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            Foundation Curriculum (PDF)
          </a>
        </li>
        <li
          className="sc-iBkjds djrcRa"
        >
          <span
            className="sc-gsnTZi hnKkoM"
            style={
              Object {
                "height": "20px",
                "width": "20px",
              }
            }
          >
            <span
              className="sc-dkzDqf krVImC"
              style={
                Object {
                  "height": "20px",
                  "width": "20px",
                }
              }
            >
              <svg
                fill="none"
                height="100%"
                stroke="currentColor"
                strokeLinecap="round"
                strokeLinejoin="round"
                strokeWidth="2.5"
                viewBox="0 0 24 24"
                width="100%"
                xmlns="http://www.w3.org/2000/svg"
              >
                <polyline
                  points="9 18 15 12 9 6"
                />
              </svg>
            </span>
          </span>
          <a
            href="/"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            Higher Curriculum (PDF)
          </a>
        </li>
      </ol>
    </nav>
  </div>,
]
`;
